--- a/style.css
+++ b/style.css
@@ -80,7 +80,17 @@ li {
   margin-left: -45rem;
   margin-top: -41.5rem;
 }
-
+.fa-user-circle-o {
+  position: relative;
+  margin-top: -120px;
+  margin-left: 180px;
+  background-color: #fff;
+}
+.fa-user-circle-o:hover {
+  cursor: pointer;
+  color: rgb(211, 124, 18);
+  transition: 1s all;
+}
 .img-png {
   width: 100%;
   height: 46rem;
@@ -111,7 +121,11 @@ li {
   justify-content: center;
   gap: 0.8rem;
 }
-
+.fa-user {
+  position: absolute;
+  margin-top: -55px;
+  margin-left: 10px;
+}
 .input-name {
   font-family: "Barlow Condensed", sans-serif;
   font-size: 12px;
@@ -123,14 +137,20 @@ li {
 .name-input {
   width: 25rem;
   height: 2.5rem;
-  padding: 1rem;
+  padding: 1rem 2rem;
   font-size: 10px;
   border: none;
   letter-spacing: 0.1rem;
   border: 2px solid rgb(229, 229, 229);
   border-radius: 50px;
+  background: none;
+  backdrop-filter: blur(50px);
 }
-
+.fa-lock {
+  position: absolute;
+  margin-top: 105px;
+  margin-left: 10px;
+}
 .input-password {
   font-family: "Barlow Condensed", sans-serif;
   font-size: 12px;
@@ -142,12 +162,14 @@ li {
 .pw-input {
   width: 25rem;
   height: 2.5rem;
-  padding: 1rem;
+  padding: 1rem 2rem;
   font-size: 10px;
   letter-spacing: 0.1rem;
   border: none;
   border: 2px solid rgb(229, 229, 229);
   border-radius: 50px;
+  background: none;
+  backdrop-filter: blur(50px);
 }
 
 .login-buttons {
@@ -158,6 +180,7 @@ li {
   gap: 0.5rem;
   margin-left: 1.5rem;
   text-align: center;
+  transition: all;
 }
 
 .login-btn {
@@ -166,8 +189,10 @@ li {
   padding: 0.5rem 9rem;
   border-radius: 50px;
   color: black;
-  background-color: rgb(255, 255, 255);
+  background: none;
+  backdrop-filter: blur(50px);
   border: 2px solid rgb(0, 0, 0);
+  box-shadow: 0px 5px rgb(0, 0, 0);
   transition: 1s;
 }
 
@@ -177,8 +202,10 @@ li {
   padding: 0.5rem 9rem;
   border-radius: 50px;
   color: black;
-  background-color: rgb(255, 255, 255);
+  background: none;
+  backdrop-filter: blur(50px);
   border: 2px solid rgb(0, 0, 0);
+  box-shadow: 0px 5px rgb(0, 0, 0);
   transition: 1s;
 }
 
@@ -202,20 +229,28 @@ li {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 0.8rem;
-  margin-left: 9rem;
-  font-size: 20px;
-  color: rgb(98, 98, 98);
+  gap: 1rem;
+  margin-left: 7rem;
+  font-size: 15px;
+  color: rgb(0, 0, 0);
+}
+.fb-icon,
+.insta-icon,
+.twitter-icon,
+.linked-icon {
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 0.5rem;
 }
 .fa {
-  transition: 1s;
+  transition: 1s all;
 }
 .fa-twitter:hover,
 .fa-facebook:hover,
 .fa-instagram:hover,
 .fa-linkedin:hover {
-  font-size: 25px;
-  transition: 1s;
+  font-size: 20px;
+  transition: 1s all;
   cursor: pointer;
   color: rgb(211, 124, 18);
 }
