--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   display: block;
   font-family: "Barlow Condensed", sans-serif;
   font-family: "Vina Sans", sans-serif;
-  background-color: #ffffff;
+  background: rgb(255, 255, 255);
 }
 
 /* global css */
@@ -51,6 +51,104 @@ li {
   border: 2px solid #1c2042;
 }
 
+/* Nav-Container */
+.nav-container {
+  position: fixed;
+  width: 100%;
+  height: 4rem;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+  gap: 1rem;
+  border-bottom: 1px solid #cdcdcd;
+  box-shadow: 0 1px 5px rgb(230, 230, 230);
+  background: none;
+  backdrop-filter: 50px;
+  z-index: 1;
+}
+
+.nav-logo {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.logo-png {
+  width: 5rem;
+  height: auto;
+  /* filter: grayscale(100%); */
+  filter: drop-shadow(5px 7px 0px #a8a8a8);
+  filter: grayscale(100%);
+  transition: 1s;
+}
+.logo-png:hover {
+  cursor: pointer;
+  width: 6rem;
+  transition: 2s;
+}
+
+.nav-details {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  margin-right: -7rem;
+}
+.detail-para {
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 13px;
+  letter-spacing: 0.2rem;
+  color: rgb(0, 0, 0);
+  font-weight: 400;
+  transition: 1s;
+}
+.detail-para:hover {
+  cursor: pointer;
+  /* background-color: #000000;
+  border: 1px solid black; */
+  padding: 0.5rem;
+  border-radius: 5px;
+  color: #000000;
+  font-weight: 600;
+  transition: 1s;
+}
+.nav-btn {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.sign-nav-btn {
+  font-family: "Barlow Condensed";
+  font-size: 14px;
+  letter-spacing: 0.2rem;
+  text-align: center;
+  padding: 0.4rem 1rem;
+  border-radius: 5px;
+  color: black;
+  background: none;
+  backdrop-filter: blur(50px);
+  border: 2px solid rgb(0, 0, 0);
+  box-shadow: 0px 2px 10px rgb(231, 231, 231);
+  transition: 1s;
+  margin-top: -0.2rem;
+}
+.sign-nav-btn:hover {
+  background-color: black;
+  color: #fff;
+  border: 2px solid black;
+  transition: 1s;
+  font-weight: 600;
+}
 /* <!-- #Login Container --> */
 #login-container {
   width: 100%;
@@ -82,7 +180,11 @@ li {
 }
 .fa-user-circle-o {
   position: relative;
-  margin-top: -120px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: -100px;
   margin-left: 180px;
   border: 2px solid #000000;
   background: #ffffff;
@@ -94,6 +196,7 @@ li {
   color: rgb(211, 124, 18);
   transition: 1s all;
 }
+
 .img-png {
   width: 100%;
   height: 46rem;
@@ -103,6 +206,8 @@ li {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  filter: grayscale(100%);
+  filter: drop-shadow(-10px 1px 110px rgb(211, 124, 18));
 }
 .login-title {
   font-family: "Vina Sans";
