--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@ li {
   border: 2px solid #1c2042;
 }
 
+.main-container {
+  width: 100%;
+  height: auto;
+  gap: 1rem;
+}
 /* Nav-Container */
 .nav-container {
   position: fixed;
@@ -68,6 +73,7 @@ li {
   background: none;
   backdrop-filter: 50px;
   z-index: 1;
+  overflow: hidden;
 }
 
 .nav-logo {
@@ -176,7 +182,7 @@ li {
   backdrop-filter: blur(5px);
   z-index: 1;
   margin-left: -45rem;
-  margin-top: -41.5rem;
+  margin-top: -39rem;
 }
 .fa-user-circle-o {
   position: relative;
@@ -199,7 +205,7 @@ li {
 
 .img-png {
   width: 100%;
-  height: 46rem;
+  height: 44rem;
   object-fit: scale-down;
   position: relative;
   display: flex;
