--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ li {
 }
 /* Nav-Container */
 .nav-container {
-  position: fixed;
+  /* position: fixed; */
   width: 100%;
   height: 4rem;
   position: relative;
@@ -158,17 +158,19 @@ li {
 /* <!-- #Login Container --> */
 #login-container {
   width: 100%;
-  height: auto;
+  height: 43.5rem;
   position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border-bottom: 2px solid gray;
+  box-shadow: (0px 2px 3px rgb(224, 224, 224));
 }
 
 .login-card-container {
-  width: 30rem;
-  height: 38rem;
+  width: 29rem;
+  height: 37rem;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -182,7 +184,7 @@ li {
   backdrop-filter: blur(5px);
   z-index: 1;
   margin-left: -45rem;
-  margin-top: -39rem;
+  margin-top: -38rem;
 }
 .fa-user-circle-o {
   position: relative;
@@ -190,7 +192,7 @@ li {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin-top: -100px;
+  margin-top: -90px;
   margin-left: 180px;
   border: 2px solid #000000;
   background: #ffffff;
@@ -205,7 +207,7 @@ li {
 
 .img-png {
   width: 100%;
-  height: 44rem;
+  height: 42.2rem;
   object-fit: scale-down;
   position: relative;
   display: flex;
@@ -214,6 +216,8 @@ li {
   justify-content: center;
   filter: grayscale(100%);
   filter: drop-shadow(-10px 1px 110px rgb(211, 124, 18));
+  border-bottom: 0px solid rgb(224, 224, 224);
+  box-shadow: 0px 4px rgb(0, 0, 0);
 }
 .login-title {
   font-family: "Vina Sans";
