--- a/style.css
+++ b/style.css
@@ -86,18 +86,21 @@ li {
 }
 
 .logo-png {
-  width: 5rem;
+  width: 7.8rem;
   height: auto;
-  /* filter: grayscale(100%); */
-  filter: drop-shadow(5px 7px 0px #a8a8a8);
   filter: grayscale(100%);
-  transition: 1s;
+  filter: drop-shadow(1px 30px 20px rgb(195, 195, 195));
+  /* filter: grayscale(100%); */
+  /* transition: 1s; */
+  /* border: 1px solid black;
+  border-radius: 50px; */
+  /* border-bottom: 5px solid rgb(0, 0, 0); */
 }
-.logo-png:hover {
+/* .logo-png:hover {
   cursor: pointer;
   width: 6rem;
   transition: 2s;
-}
+} */
 
 .nav-details {
   width: 100%;
@@ -164,8 +167,8 @@ li {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border-bottom: 2px solid gray;
-  box-shadow: (0px 2px 3px rgb(224, 224, 224));
+  border-bottom: 2px solid rgb(224, 224, 224);
+  box-shadow: 0px 2px 3px rgb(192, 192, 192);
 }
 
 .login-card-container {
@@ -217,7 +220,7 @@ li {
   filter: grayscale(100%);
   filter: drop-shadow(-10px 1px 110px rgb(211, 124, 18));
   border-bottom: 0px solid rgb(224, 224, 224);
-  box-shadow: 0px 4px rgb(0, 0, 0);
+  box-shadow: 0px 4px rgb(255, 255, 255);
 }
 .login-title {
   font-family: "Vina Sans";
@@ -291,6 +294,13 @@ li {
   background: none;
   backdrop-filter: blur(50px);
 }
+.check-box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10.5rem;
+}
 .checkbox-para {
   display: flex;
   flex-direction: row;
@@ -306,6 +316,16 @@ li {
 }
 .checkbox-color {
   accent-color: #000000;
+}
+.forgot-pw-para {
+  cursor: pointer;
+  font-family: "Barlow Condensed";
+  font-size: 10px;
+  letter-spacing: 2px;
+  color: rgb(0, 0, 0);
+  font-weight: 400;
+  margin-left: 1.5rem;
+  margin-top: 0.5rem;
 }
 .login-buttons {
   display: flex;
