--- a/style.css
+++ b/style.css
@@ -171,8 +171,8 @@ li {
 /* <!-- #Login Container --> */
 #login-container {
   width: 100%;
-  height: 43.5rem;
-  position: absolute;
+  height: 45.5rem;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -184,7 +184,7 @@ li {
 .login-card-container {
   width: 29rem;
   height: 37rem;
-  position: relative;
+  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -197,15 +197,15 @@ li {
   backdrop-filter: blur(5px);
   z-index: 1;
   margin-left: -45rem;
-  margin-top: -38rem;
+  margin-top: 2rem;
 }
 .fa-user-circle-o {
-  position: relative;
+  position: absolute;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin-top: -90px;
+  margin-top: -70px;
   margin-left: 180px;
   border: 2px solid #000000;
   background: #ffffff;
@@ -220,17 +220,17 @@ li {
 
 .img-png {
   width: 100%;
-  height: 42.2rem;
+  height: 44.3rem;
   object-fit: scale-down;
   position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   filter: grayscale(100%);
   filter: drop-shadow(-10px 1px 110px rgb(211, 124, 18));
   border-bottom: 0px solid rgb(224, 224, 224);
-  box-shadow: 0px 4px rgb(255, 255, 255);
+  /* box-shadow: 0px 4px 0px rgb(0, 0, 0); */
 }
 .login-title {
   font-family: "Vina Sans";
@@ -418,4 +418,20 @@ li {
   transition: 1s;
   cursor: pointer;
   color: rgb(211, 124, 18);
+}
+
+.main-heading {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.header-title {
+  position: absolute;
+  font-size: 60px;
+  font-family: "Vina Sans";
+  font-weight: 400;
+  z-index: 1;
+  margin-left: 60rem;
+  margin-bottom: 40rem;
 }
