--- a/style.css
+++ b/style.css
@@ -170,15 +170,16 @@ li {
 }
 /* <!-- #Login Container --> */
 #login-container {
+  overflow: hidden;
   width: 100%;
-  height: 45.5rem;
+  height: 44.5rem;
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border-bottom: 2px solid rgb(224, 224, 224);
-  box-shadow: 0px 2px 3px rgb(192, 192, 192);
+  /* border-bottom: 1px solid rgb(224, 224, 224); */
+  /* box-shadow: 0px 1px 0px rgb(192, 192, 192); */
 }
 
 .login-card-container {
@@ -232,6 +233,41 @@ li {
   border-bottom: 0px solid rgb(224, 224, 224);
   /* box-shadow: 0px 4px 0px rgb(0, 0, 0); */
 }
+
+.main-heading {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.header-title {
+  position: absolute;
+  width: 40rem;
+  font-size: 150px;
+  font-family: "Vina Sans";
+  font-weight: 400;
+  letter-spacing: 0.3rem;
+  z-index: -1;
+  margin-left: 65rem;
+  margin-bottom: 45rem;
+  color: #606060;
+  filter: drop-shadow(1px 9px 1px rgb(184, 184, 184));
+}
+/* .head-para {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 5rem;
+  font-size: 10px;
+  font-family: "Barlow Condensed";
+  font-weight: 200;
+  letter-spacing: 0.3rem;
+  z-index: 1;
+  margin-left: 52rem;
+  margin-bottom: 15rem;
+} */
 .login-title {
   font-family: "Vina Sans";
   font-size: 55px;
@@ -418,20 +454,4 @@ li {
   transition: 1s;
   cursor: pointer;
   color: rgb(211, 124, 18);
-}
-
-.main-heading {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-.header-title {
-  position: absolute;
-  font-size: 60px;
-  font-family: "Vina Sans";
-  font-weight: 400;
-  z-index: 1;
-  margin-left: 60rem;
-  margin-bottom: 40rem;
 }
