--- a/style.css
+++ b/style.css
@@ -449,6 +449,7 @@ li {
   /* filter: drop-shadow(1px 6px 1px rgb(127, 127, 127)); */
   background: none;
   backdrop-filter: blur(50px);
+  box-shadow: 0px 5px 50px beige;
 }
 .cosmetics-details-para {
   display: flex;
@@ -465,4 +466,8 @@ li {
   letter-spacing: 0.3rem;
   line-height: 1.2rem;
   margin-top: 13rem;
+  border: 2px solid rgb(237, 237, 237);
+  padding: 1rem 2rem;
+  border-radius: 50px;
+  box-shadow: 0px 5px 50px beige;
 }
