--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ html {
 
 body {
   display: block;
+  font-family: "Elsie", serif;
   font-family: "Barlow Condensed", sans-serif;
   font-family: "Erica One", sans-serif;
-  font-family: "Elsie", serif;
   font-family: "Vina Sans", sans-serif;
   background: rgb(255, 255, 255);
 }
@@ -194,8 +194,8 @@ li {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  border: 2px solid rgb(205, 205, 205);
-  box-shadow: 0 2px rgb(240, 240, 240);
+  border: 2px solid rgb(238, 238, 238);
+  box-shadow: 0 1px rgb(240, 240, 240);
   gap: 2rem;
   padding: 2rem;
   border-radius: 5px;
@@ -222,7 +222,12 @@ li {
   color: rgb(211, 124, 18);
   transition: 1s all;
 }
-
+.img-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: center;
+}
 .img-png {
   width: 100%;
   height: 44.3rem;
@@ -450,12 +455,19 @@ li {
   background: none;
   backdrop-filter: blur(50px);
   box-shadow: 0px 5px 50px beige;
+  transition: 1s;
+}
+.cosmetics-title:hover {
+  cursor: pointer;
+  color: #afafaf;
+  transition: 1s;
 }
 .cosmetics-details-para {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 .cosmetics-para {
   text-align: center;
@@ -468,6 +480,139 @@ li {
   margin-top: 13rem;
   border: 2px solid rgb(237, 237, 237);
   padding: 1rem 2rem;
+  z-index: 1;
   border-radius: 50px;
   box-shadow: 0px 5px 50px beige;
+}
+/*  <!-- card-content-container  --> */
+.cosmetics-cards-1 {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 2rem;
+  gap: 2rem;
+}
+
+.card-1-content,
+.card-2-content,
+.card-3-content {
+  /* position: absolute; */
+  width: 25rem;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 1rem;
+  border: 2px solid rgb(212, 212, 212);
+  border-radius: 25px;
+  background: rgb(255, 255, 255);
+  /* backdrop-filter: blur(50px); */
+  box-shadow: 0px 2px 10px rgb(254, 240, 222);
+  z-index: 1;
+}
+.cosmetics-img {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.card-1-png,
+.card-2-png,
+.card-3-png {
+  object-fit: cover;
+  background-color: #e3c9db;
+  border-radius: 23px;
+  width: 100%;
+  height: 30rem;
+}
+.card-1-details {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 1rem;
+  gap: 0.7rem;
+}
+.card-name-heart {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  /* gap: 15rem; */
+}
+.card-1-title {
+  font-size: 20px;
+  font-family: "Barlow Condensed", sans-serif;
+  font-weight: 900;
+  letter-spacing: 0.2rem;
+  text-align: center;
+  color: rgb(40, 40, 40);
+}
+.fa-heart {
+  margin-left: 230px;
+}
+.fa-heart:hover {
+  cursor: pointer;
+  color: red;
+}
+.cards-para {
+  width: 25rem;
+  font-size: 10px;
+  font-family: "Barlow Condensed", sans-serif;
+  font-weight: 200;
+  letter-spacing: 0.2rem;
+  line-height: 1rem;
+  text-align: start;
+  color: rgb(1, 1, 1);
+}
+
+.card-1-price {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  font-size: 16px;
+  font-family: "Barlow Condensed", sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.2rem;
+  text-align: center;
+  color: rgb(0, 0, 0);
+  background-color: rgb(247, 247, 247);
+  gap: 0.5rem;
+  border: 2px solid rgb(89, 89, 89);
+  padding: 0.1rem 1rem;
+  border-radius: 25px;
+}
+
+.card-purchase {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  text-overflow: none;
+  gap: 0.2rem;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Vina Sans";
+  letter-spacing: 0.2rem;
+  color: #000000;
+  background: none;
+  border: 2px solid rgb(0, 0, 0);
+  padding: 0.5rem 7rem;
+  border-radius: 25px;
+  transition: 1s ease;
+  margin-bottom: 1.5rem;
+}
+.card-purchase:hover {
+  background-color: #000000;
+  color: #ffffff;
+  transition: 1s ease;
 }
