--- a/style.css
+++ b/style.css
@@ -463,11 +463,30 @@ li {
   transition: 1s;
 }
 .cosmetics-details-para {
+  width: 65rem;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   position: relative;
+  margin-top: 13rem;
+  padding: 1rem 5rem;
+  z-index: 1;
+  box-shadow: 0px 5px 50px beige;
+  border: 2px solid rgb(237, 237, 237);
+  border-radius: 50px;
+  gap: 0.5rem;
+  margin-left: 15rem;
+  margin-bottom: 3rem;
+}
+.cosmetics-details-head {
+  font-size: 16px;
+  font-family: "Vina Sans";
+  text-align: center;
+  font-weight: 400;
+  letter-spacing: 0.3rem;
+  color: #000000;
 }
 .cosmetics-para {
   text-align: center;
@@ -477,12 +496,6 @@ li {
   font-weight: 600;
   letter-spacing: 0.3rem;
   line-height: 1.2rem;
-  margin-top: 13rem;
-  border: 2px solid rgb(237, 237, 237);
-  padding: 1rem 2rem;
-  z-index: 1;
-  border-radius: 50px;
-  box-shadow: 0px 5px 50px beige;
 }
 /*  <!-- card-content-container  --> */
 .cosmetics-cards-1 {
@@ -492,6 +505,7 @@ li {
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
+  position: relative;
   padding: 2rem;
   gap: 2rem;
 }
@@ -615,4 +629,33 @@ li {
   background-color: #000000;
   color: #ffffff;
   transition: 1s ease;
+}
+
+.cards-end-btn {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.card-view-btn {
+  text-align: center;
+  text-overflow: none;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Vina Sans";
+  letter-spacing: 0.5rem;
+  background-color: #000000;
+  color: #ffffff;
+  border: 2px solid rgb(0, 0, 0);
+  padding: 1rem 6rem;
+  border-radius: 25px;
+  transition: 1s ease;
+  margin-bottom: 1.5rem;
+  box-shadow: 0px 10px 20px rgb(190, 190, 190);
+  transition: 1s;
+}
+.card-view-btn:hover {
+  background-color: #fff;
+  color: #000000;
+  transition: 1s;
 }
