--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ li {
 }
 
 .main-container {
+  scroll-behavior: smooth;
   position: relative;
   width: 100%;
   height: auto;
@@ -631,18 +632,20 @@ li {
   padding: 0.1rem 1rem;
   border-radius: 25px;
 }
-
-.card-purchase {
+.card-1-btn {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  gap: 0.5rem;
+}
+.card-purchase {
+  text-align: center;
   text-overflow: none;
-  gap: 0.2rem;
-  font-size: 14px;
-  font-weight: 400;
-  font-family: "Vina Sans";
-  letter-spacing: 0.2rem;
+  font-size: 18px;
+  font-weight: 900;
+  font-family: "Barlow Condensed";
+  letter-spacing: 0.1rem;
   color: #000000;
   background: none;
   border: 2px solid rgb(0, 0, 0);
@@ -666,22 +669,290 @@ li {
 .card-view-btn {
   text-align: center;
   text-overflow: none;
-  font-size: 16px;
-  font-weight: 400;
-  font-family: "Vina Sans";
+  font-size: 18px;
+  font-weight: 600;
+  font-family: "Barlow Condensed";
   letter-spacing: 0.5rem;
   background-color: #000000;
   color: #ffffff;
   border: 2px solid rgb(0, 0, 0);
-  padding: 1rem 6rem;
+  padding: 0.9rem 5.5rem;
   border-radius: 25px;
   transition: 1s ease;
   margin-bottom: 1.5rem;
-  box-shadow: 0px 10px 20px rgb(190, 190, 190);
+  box-shadow: 0px 10px 20px rgb(209, 209, 209);
   transition: 1s;
 }
 .card-view-btn:hover {
   background-color: #fff;
+  color: #000000;
+  transition: 1s;
+}
+
+/* Price-details */
+
+.price-details-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  padding: 2rem;
+}
+.price-details-top {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+.price-title {
+  font-size: 66px;
+  font-weight: 900;
+  font-family: "Barlow Condensed", serif;
+  letter-spacing: 0.2rem;
+  color: #000000;
+}
+.price-head-para {
+  width: 45rem;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Barlow Condensed", sans-serif;
+  letter-spacing: 0.2rem;
+  color: #000000;
+  line-height: 1.2rem;
+  text-align: center;
+}
+.price-change-btn {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.yearly-btn {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Barlow Condensed", sans-serif;
+  letter-spacing: 0.2rem;
+  background-color: #000000;
+  color: #ffffff;
+  border: 2px solid rgb(0, 0, 0);
+  padding: 0.5rem 1.5rem;
+  border-radius: 25px;
+  transition: 1s;
+}
+.monthly-btn {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Barlow Condensed", sans-serif;
+  letter-spacing: 0.2rem;
+  background-color: #ffffff;
+  color: #000000;
+  border: 2px solid rgb(0, 0, 0);
+  padding: 0.5rem 1.5rem;
+  border-radius: 25px;
+  transition: 1s;
+}
+.yearly-btn:hover {
+  background-color: #ffffff;
+  color: #000000;
+  transition: 1s;
+  transform: scale(1.1);
+}
+.monthly-btn:hover {
+  background-color: #000000;
+  color: #ffffff;
+  transition: 1s;
+  transform: scale(1.1);
+}
+.card-details-main {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+.price-details-card-1,
+.price-details-card-2,
+.price-details-card-3 {
+  width: 22rem;
+  height: 35rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
+  /* background-color: #ffffff; */
+  border: 2px solid rgb(186, 186, 186);
+  padding: 1rem;
+  border-radius: 25px;
+  box-shadow: 0px 4px 2px rgb(214, 214, 214);
+  margin-top: 2rem;
+  transform: scale(1);
+  margin-bottom: 3rem;
+}
+.price-details-card-2 {
+  width: 25rem;
+  height: 40rem;
+}
+.price-card-1-top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1rem;
+  gap: 0.5rem;
+}
+
+.card-1-line-1,
+.card-2-line-1,
+.card-3-line-1 {
+  font-size: 16px;
+  font-weight: 600;
+  font-family: "Barlow Condensed", sans-serif;
+  letter-spacing: 0.2rem;
+}
+.card-1-amount,
+.card-2-amount,
+.card-3-amount {
+  font-size: 50px;
+  font-weight: 400;
+  font-family: "Vina Sans", sans-serif;
+  color: rgb(60, 60, 60);
+}
+.card-1-line-para,
+.card-2-line-para,
+.card-3-line-para {
+  font-size: 12px;
+  font-weight: 400;
+  font-family: "Barlow Condensed", sans-serif;
+  letter-spacing: 0.2rem;
+  color: rgb(60, 60, 60);
+}
+
+.price-card-1-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+.price-card-1-content {
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Barlow Condensed", sans-serif;
+  letter-spacing: 0.2rem;
+  line-height: 2.3rem;
+  color: #5b5b5b;
+}
+
+.card-1-bottom-btn,
+.card-1-bottom-btn,
+.card-1-bottom-btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.card-1-plan-btn,
+.card-2-plan-btn,
+.card-3-plan-btn {
+  text-align: center;
+  font-size: 14px;
+  font-weight: 600;
+  font-family: "Barlow Condensed", sans-serif;
+  letter-spacing: 0.2rem;
+  background-color: #000000;
+  color: #ffffff;
+  padding: 0.8rem 3.5rem;
+  border: 2px solid rgb(52, 52, 52);
+  border-radius: 25px;
+  transition: 1s;
+}
+.card-bottom-para {
+  text-align: center;
+  font-size: 10px;
+  font-weight: 400;
+  font-family: "Barlow Condensed", sans-serif;
+  letter-spacing: 0.2rem;
+  color: #afafaf;
+  margin-top: 1rem;
+}
+
+.card-1-plan-btn {
+  background-color: rgb(255, 236, 199);
+  color: #000000;
+  transition: 1s;
+}
+.card-2-plan-btn {
+  background-color: rgb(198, 255, 198);
+  color: #000000;
+  transition: 1s;
+}
+
+.card-3-plan-btn {
+  background-color: rgb(187, 187, 255);
+  color: #000000;
+  transition: 1s;
+}
+.card-1-plan-btn:hover {
+  background-color: rgb(219, 153, 22);
+  color: #000000;
+  transition: 1s;
+}
+.card-2-plan-btn:hover {
+  background-color: rgb(19, 203, 19);
+  color: #000000;
+  transition: 1s;
+}
+
+.card-3-plan-btn:hover {
+  background-color: rgb(21, 21, 205);
+  color: #000000;
+  transition: 1s;
+}
+
+.price-details-card-1:hover,
+.price-details-card-2:hover,
+.price-details-card-3:hover {
+  cursor: pointer;
+  width: 22rem;
+  height: 35rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
+  background-color: #ffffff;
+  border: 3px solid rgb(0, 0, 0);
+  padding: 1rem;
+  border-radius: 25px;
+  box-shadow: 0px 4px 2px rgb(214, 214, 214);
+  margin-top: 2rem;
+  transform: scale(1.2);
+  z-index: 1;
+  transition: 1s;
+}
+.price-details-card-1:hover {
+  background-color: rgb(255, 249, 237);
+  color: #000000;
+  transition: 1s;
+}
+.price-details-card-2:hover {
+  background-color: rgb(230, 255, 230);
+  color: #000000;
+  transition: 1s;
+}
+.price-details-card-3:hover {
+  background-color: rgb(227, 227, 255);
   color: #000000;
   transition: 1s;
 }
