--- a/style.css
+++ b/style.css
@@ -733,10 +733,10 @@ li {
   z-index: 1;
   margin-bottom: -10rem;
   margin-left: -32rem;
-  border: 1px solid rgb(183, 183, 183);
-  box-shadow: 0px 1px 0px white;
+  /* border: 1px solid rgb(183, 183, 183);
+  box-shadow: 0px 1px 0px white; */
   padding: 1rem;
-  backdrop-filter: blur(2px);
+  /* backdrop-filter: blur(5px); */
 }
 .products-head {
   width: 35rem;
