--- a/style.css
+++ b/style.css
@@ -768,7 +768,7 @@ li {
 }
 
 .product-icon-text {
-  color: #ffffff;
+  color: #ffe8fa;
   font-size: 14px;
   font-family: "Barlow Condensed";
   letter-spacing: 0.2rem;
@@ -793,6 +793,46 @@ li {
   background-color: #000000;
   color: #ffffff;
   transition: 1s;
+}
+
+/* Brands img */
+.brands-container {
+  width: 100%;
+  height: auto;
+  position: relative;
+  padding: 2rem;
+}
+.brands-img {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  gap: 2rem;
+  padding: 2rem;
+  border: 2px solid rgb(106, 106, 106);
+  border-radius: 150px;
+
+  /* box-shadow: 0px 15px 10px -2px rgb(238, 238, 238);
+  -webkit-box-shadow: 0px 15px 10px -2px rgb(243, 243, 243);
+  -moz-box-shadow: 0px 15px 10px -2px rgb(246, 246, 246); */
+  box-shadow: 2px 56px 0px -40px rgba(0, 0, 0, 0.81);
+  -webkit-box-shadow: 2px 56px 0px -40px rgba(0, 0, 0, 0.81);
+  -moz-box-shadow: 2px 56px 0px -40px rgba(0, 0, 0, 0.81);
+}
+.brands-png {
+  width: 10rem;
+  height: auto;
+  padding: 1rem;
+  border: 2px solid rgb(233, 233, 233);
+  border-radius: 10px;
+  transition: 1s;
+  transform: scale(1);
+}
+.brands-png:hover {
+  cursor: pointer;
+  transition: 1s;
+  transform: scale(1.1);
 }
 /* Price-details */
 
