--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@200;400;600&family=Elsie:wght@400;900&family=Erica+One&family=Vina+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@200;400;600&family=Elsie:wght@400;900&family=Erica+One&family=Smooch&family=Vina+Sans&display=swap");
 
 *,
 *::after,
@@ -20,6 +20,7 @@ body {
   display: block;
   font-family: "Elsie", serif;
   font-family: "Barlow Condensed", sans-serif;
+  font-family: "Smooch", cursive;
   font-family: "Erica One", sans-serif;
   font-family: "Vina Sans", sans-serif;
   background: rgb(255, 255, 255);
@@ -850,11 +851,17 @@ li {
   gap: 1rem;
 }
 .price-title {
-  font-size: 66px;
-  font-weight: 900;
-  font-family: "Barlow Condensed", serif;
+  font-size: 80px;
+  font-weight: 500;
+  font-family: "Smooch", cursive;
   letter-spacing: 0.2rem;
   color: #000000;
+  transition: 1s;
+}
+.price-title:hover {
+  color: rgb(203, 139, 21);
+  transition: 1s;
+  cursor: pointer;
 }
 .price-head-para {
   width: 45rem;
